Implement pipelines section summary diffing